--- a/css/style.css
+++ b/css/style.css
@@ -776,12 +776,13 @@ h2.resp-accordion {
 }
 
 h2.resp-accordion {
-    font-size: 14px;
+     font-size: 14px;
     border: 1px solid #c1c1c1;
     border-top: 0px solid #c1c1c1;
     margin: 0px;
+    text-align: center;
     padding: 10px 15px;
-    color: #000;
+    color: #f8f9fa;
 }
 
 h2.resp-tab-active {
